--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ a {
 	border-bottom: 1px solid #E5E5E5;
 	color: var(--color-dark-gray);
 	min-height: 70px;
+	max-height: 70px;
 }
 
 .details__item:after {
