--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ a {
 
 .profile--avatar img {
 	margin: auto;
-	width: 200px;
-	height: 200px;
+	max-width: 30%;
 	border-radius: 50%;
 	object-fit: cover;
 }
@@ -86,7 +85,7 @@ a {
 .details {
 	flex: 1;
 	background-color: var(--color-light);
-	padding: 55px 16px;
+	padding: 10px 16px;
 	display: flex;
 	flex-direction: column;
 }
